SubApp.yaml
apiVersion: v1
kind: Service
metadata:
  name: sub-svc
  labels:
    app: sub-svc
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sub-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sub-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sub-app
        version: v1
    spec:
      containers:
      - name: sub-app
        image: leisureroad/sub-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
